stop test sound

--- a/timer.html
+++ b/timer.html
@@ -462,7 +462,7 @@
                 });
                 
                 isAudioPlaying = true;
-                testBtn.textContent = 'Pause Sound';
+                testBtn.textContent = 'Stop Test Sound';
                 
                 // Clear any existing pause timer
                 if (pauseTimer) {
