--- a/timer.html
+++ b/timer.html
@@ -159,8 +159,10 @@
         }
 
         button.track.active {
-            background: linear-gradient(135deg, var(--special) 0%, var(--special-hover) 100%);
-            box-shadow: 0 4px 15px rgba(215, 153, 33, 0.5);
+            background: var(--turquoise-neon);
+            box-shadow: 0 4px 15px rgba(0, 206, 209, 0.5);
+            color: var(--white);
+            border: 2px solid var(--turquoise);
         }
 
         .theme-toggle {
