--- a/timer.html
+++ b/timer.html
@@ -393,7 +393,7 @@
         </div>
 
         <div class="input-group">
-            <label>Repeat Until:</label>
+            <label>Repeat For:</label>
             <div class="input-row">
                 <input type="number" class="small" id="repeatHours" value="0" min="0" max="24">
                 <span class="inline-label">hours</span>
